--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 #header h1{
     font-size: 400%;
     text-align: center;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: bold;
     -webkit-background-clip: text;
     -moz-background-clip: text;
